--- a/templates/RandomForestClassifer.html
+++ b/templates/RandomForestClassifer.html
@@ -61,15 +61,15 @@
     <div style="border:1px solid black; border-radius: 10px; display:flex; padding: 10px; font-family: monsterrat; flex-direction: column; align-items: flex-start; position: absolute; margin-top:270px; margin-left: 63%; font-size: 20px">
         <div style="display: flex; justify-content: center; align-items: baseline;">
             <div style="width: 9px; height: 9px; background-color: red; border-radius: 2px; border-color: black; margin-top: 15px;"></div>
-            <p style="margin-left: 5px;">High Crime Rate Area</p>
+            <p style="margin-left: 5px;">High Crime Area</p>
         </div>
         <div style="display: flex; justify-content: center; align-items: baseline; ">
             <div style="width: 9px; height: 9px; background-color: orange;border-radius: 2px; border-color: black;  margin-top: 15px;"></div>
-            <p style="margin-left: 5px;">Medium Crime Rate Area</p>
+            <p style="margin-left: 5px;">Medium Crime Area</p>
         </div>
         <div style="display: flex; justify-content: center; align-items: baseline;">
             <div style="width: 9px; height: 9px; background-color: green;border-radius: 2px; border-color: black; margin-top: 15px;"></div>
-            <p style="margin-left: 5px;">Low Crime Rate Area</p>
+            <p style="margin-left: 5px;">Low Crime Area</p>
         </div>
 
     </div>
@@ -113,7 +113,7 @@
             <br>
 
             <div style=" margin-top: 25px; margin-bottom: 60px; ">
-                <label style="margin-left:25%; margin-bottom: 20px; font-size: 25px;" for="prediction-input"><b>PROJECTION:</b></label>
+                <label style="margin-left:25%; margin-bottom: 20px; font-size: 25px;" for="prediction-input"><b>PROJECTION LABEL:</b></label>
                 <p id="prediction-text" style=" margin-bottom: 20px;" class="prediction-text">{{ prediction_text }} </p>
             </div>
             <script>
