--- a/templates/Analysis3(maps).html
+++ b/templates/Analysis3(maps).html
@@ -206,6 +206,8 @@
     <nav class="main">
         <a href="{{url_for('index')}}"><label style="margin-left:0;"class="logo">CRIME ANALYSIS</label></a>
         <ul>
+            <li><a href="{{url_for('index')}}">Home</a>
+            </li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Feedback</a></li>
