--- a/templates/crimefeed.html
+++ b/templates/crimefeed.html
@@ -38,8 +38,22 @@
         </div>
     </div>
     <div style="display:flex; justify-content: center; ">
-        <button class="button">REFRESH</button>
+        <button class="button" onclick="runFile()">REFRESH</button>
     </div>
+    <script>
+        function runFile() {
+            setTimeout(() => {
+                alert("No New Updates")
+            }, 15000);
+            fetch('/run-file')
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.message);
+                });
+
+
+        }
+    </script>
     <div class="box" style="margin-left: 50px; width: 90%;margin-top: 40px; overflow: hidden; ">
         <iframe src="{{url_for('foliummap')}}" style=" width: 100% ;height:100% ;"></iframe>
     </div>
