--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <li>
                 <a href="{{url_for('index')}}">Home</a>
             </li>
-            <li><a href="#">About</a></li>
+            <li><a href="{{url_for('about')}}">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Feedback</a></li>
         </ul>
@@ -113,18 +113,6 @@
                 </div>
 
 
-
-                <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                    <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Data</h2>
-                    <p class="leading-relaxed text-base mb-4">Check out the multiple crime datasets that were used in this project.</p>
-                    <a href="{{url_for('datadisp')}}"><button class=button class="text-blue-500 inline-flex items-center" >Try Now  
-                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                 <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
-                  </button>
-                    </svg>
-                    </a>
-                </div>
-
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
                     <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Geo-Spatial Analysis</h2>
                     <p class="leading-relaxed text-base mb-4">Using Choropleth to Visualize Crime Data on Geographical Locations.</p>
@@ -149,6 +137,17 @@
                  <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
                   </button>
                         </svg>
+                    </a>
+                </div>
+
+                <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
+                    <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Data</h2>
+                    <p class="leading-relaxed text-base mb-4">Check out the multiple crime datasets that were used in this project.</p>
+                    <a href="{{url_for('datadisp')}}"><button class=button class="text-blue-500 inline-flex items-center" >Try Now  
+                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                 <path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+                  </button>
+                    </svg>
                     </a>
                 </div>
 
