Feedback And Contact

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
                 <a href="{{url_for('index')}}">Home</a>
             </li>
             <li><a href="{{url_for('about')}}">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Feedback</a></li>
+            <li><a href="https://github.com/Mubeen-Zaki/Final_Year_Project">Contact</a></li>
+            <li><a href="{{url_for('feedback')}}">Feedback</a></li>
         </ul>
     </nav>
 
