--- a/templates/About.html
+++ b/templates/About.html
@@ -112,10 +112,9 @@
             <div class="card bg-primary border-light shadow-soft" style="width: 600px;">
                 <div class="card-body">
                     <h3 class="h5 card-title mt-3" style="font-size: 32px;font-weight: 1000;">Which technologies are used ?</h3>
-                    <p class="card-text">To develop this project, we have used Python, Flask framework, web scraping and crawling, zing charts, Beautiful soup library, pandas, FB Prophet library for implementing maps and Machine Learning.<br> &nbsp; • Data Analysis is the
+                    <p class="card-text">To develop this project, we have used Python, Machine Learning Techniques, Flask framework, web scraping and selenium, charts, Beautiful soup library, pandas, FB Prophet library for implementing maps and Machine Learning.<br> &nbsp; • Data Analysis is the
                         process of bringing order and structure to collected data. It turns data into information teams can use.<br> &nbsp; • Data visualization is the process of putting data into a chart, graph, or other visual format that helps inform
-                        analysis and interpretation.<br> &nbsp; • Web scraping is the process to extract content and data from a website.<br> &nbsp; • Real-Time analytics the data is analyzed right after data becomes available and processes data and produces
-                        insights.
+                        analysis and interpretation.<br> &nbsp; • Web scraping is the process to extract content and data from a website.
                         <br> &nbsp; • Predictive analysis is used tp analyze existing data, work out patterns and predict future outcomes or trends.<br> &nbsp;
 
                     </p>
@@ -131,246 +130,9 @@
             <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_xsnsvpbs.json" background="transparent" speed="1" style="width: 400px; height: 400px;" loop autoplay></lottie-player>
         </div>
     </div>
-    <!-- ----------------------------------------------------------------------Accordion---------------------------------------------------->
+  
 
-    <!--------------------------------------------------------Cards trial---------------------------------------------------------------------->
-
-    <div class="programmers-image" style="font-size:50px; font-weight: 900; 
-    font-size: 50px;
-    font-weight: 900;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    font-family: 'Courier New', Courier, monospace;">
-        <span>
-            <- meet our team <i class="fas fa-users"></i> -/>
-        </span>
-
-    </div>
-
-    <!--------------------------------------------------------Cards trial---------------------------------------------------------------------->
-
-    <!-- -----------------------------------------------------------------------profile cards------------------------------------------------------------------------------------ -->
-    <div>
-        <div class="row pt-8 pr-6 pl-6">
-            <div class="col-3 ">
-                <!-- Profile Card -->
-                <div class="profile-card mb-5 pl-2 pr-2">
-                    <div class="card bg-primary shadow-inset border-light text-center">
-                        <div class="card-header">
-                            <div class="profile-image bg-primary shadow-inset border border-light rounded mx-auto p-3 mt-n6">
-                                <img src="{{url_for('static',filename='assets/images/Rv_profile.jpeg')}}" class="card-img-top rounded" alt="Profile photo">
-                            </div>
-                        </div>
-                        <div class="card-body pb-5">
-                            <h3 class="h5 mb-2">Aryaveer Bajpai</h3>
-                            <span class="h6 font-weight-normal text-gray mb-3">Developer</span>
-                            <ul class="list-unstyled d-flex justify-content-center mt-3 mb-4">
-                                <li>
-                                    <a href="https://www.facebook.com/aryaveerbajpai/" target="_blank" aria-label="facebook social link" class="icon icon-xs icon-facebook mr-3">
-                                        <span class="fab fa-facebook-f"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank" aria-label="twitter social link" class="icon icon-xs icon-twitter mr-3">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://github.com/aryaveer3" target="_blank" aria-label="github social link" class="icon icon-xs icon-github mr-3">
-                                        <span class="fab fa-github"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://www.linkedin.com/in/aryaveer-bajpai-a6713718b/" target="_blank" aria-label="linkedin social link" class="icon icon-xs icon-linkedin mr-3">
-                                        <span class="fab fa-linkedin"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                            <a class="btn btn-sm btn-primary mr-3" href="https://www.instagram.com/aryaveer_bajpai/">
-                                <span class="fas fa-user-plus mr-1"></span> Follow
-                            </a>
-                            <a class="btn btn-sm btn-primary" href="mailto:aryaveerbajpai@gmail.com">
-                                Message
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- End of Profile Card -->
-            </div>
-            <div class="col-3">
-                <!-- Profile Card -->
-                <div class="profile-card mb-5 pl-2 pr-2">
-                    <div class="card bg-primary shadow-inset border-light text-center">
-                        <div class="card-header">
-                            <div class="profile-image bg-primary shadow-inset border border-light rounded mx-auto p-3 mt-n6">
-                                <img src="{{url_for('static',filename='assets/images/Arpita_profile.jpeg')}}" class="card-img-top rounded" alt="Profile photo">
-                            </div>
-                        </div>
-                        <div class="card-body pb-5">
-                            <h3 class="h5 mb-2">Arpita Mishra</h3>
-                            <span class="h6 font-weight-normal text-gray mb-3">Developer</span>
-                            <ul class="list-unstyled d-flex justify-content-center mt-3 mb-4">
-                                <li>
-                                    <a href="https://www.facebook.com/profile.php?id=100052450744390" target="_blank" aria-label="facebook social link" class="icon icon-xs icon-facebook mr-3">
-                                        <span class="fab fa-facebook-f"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://twitter.com/arpita_mishra_" target="_blank" aria-label="twitter social link" class="icon icon-xs icon-twitter mr-3">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://github.com/arpitamishra27" target="_blank" aria-label="github social link" class="icon icon-xs icon-github mr-3">
-                                        <span class="fab fa-github"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://www.linkedin.com/in/arpita-mishra-8a62b3184" target="_blank" aria-label="linkedin social link" class="icon icon-xs icon-linkedin mr-3">
-
-                                        <span class="fab fa-linkedin"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                            <a class="btn btn-sm btn-primary mr-3" href="https://www.instagram.com/arpita.__.mishra/">
-                                <span class="fas fa-user-plus mr-1"></span> Follow
-                            </a>
-                            <a class="btn btn-sm btn-primary" href="mailto:arpitamishra2799@gmail.com">
-                                Message
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- End of Profile Card -->
-            </div>
-            <div class="col-3">
-                <!-- Profile Card -->
-                <div class="profile-card mb-5 pl-2 pr-2">
-                    <div class="card bg-primary shadow-inset border-light text-center">
-                        <div class="card-header">
-                            <div class="profile-image bg-primary shadow-inset border border-light rounded mx-auto p-3 mt-n6">
-                                <img src="{{url_for('static',filename='assets/images/Ashu_profile.jpeg')}}" class="card-img-top rounded" alt="Profile photo">
-                            </div>
-                        </div>
-                        <div class="card-body pb-5">
-                            <h3 class="h5 mb-2">Ashutosh Verma</h3>
-                            <span class="h6 font-weight-normal text-gray mb-3">Developer</span>
-                            <ul class="list-unstyled d-flex justify-content-center mt-3 mb-4">
-                                <li>
-                                    <a href="https://www.facebook.com/profile.php?id=100004749464773" target="_blank" aria-label="facebook social link" class="icon icon-xs icon-facebook mr-3">
-                                        <span class="fab fa-facebook-f"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://twitter.com/ashutoshv1520" target="_blank" aria-label="twitter social link" class="icon icon-xs icon-twitter mr-3">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://github.com/Ashutosh1520" target="_blank" aria-label="github social link" class="icon icon-xs icon-github mr-3">
-                                        <span class="fab fa-github"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://www.linkedin.com/mwlite/in/the-ashutosh-verma" target="_blank" aria-label="linkedin social link" class="icon icon-xs icon-linkedin mr-3">
-                                        <span class="fab fa-linkedin"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                            <a class="btn btn-sm btn-primary mr-3" href="https://www.instagram.com/ashutoshverma1520/">
-                                <span class="fas fa-user-plus mr-1"></span> Follow
-                            </a>
-                            <a class="btn btn-sm btn-primary" href="mailto:ashutoshv1520@gmail.com">
-                                Message
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- End of Profile Card -->
-            </div>
-            <div class="col-3">
-                <!-- Profile Card -->
-                <div class="profile-card mb-5 pl-2 pr-2">
-                    <div class="card bg-primary shadow-inset border-light text-center">
-                        <div class="card-header">
-                            <div class="profile-image bg-primary shadow-inset border border-light rounded mx-auto p-3 mt-n6">
-                                <img src="{{url_for('static',filename='assets/images/Ayushi_profile.jpeg')}}" class="card-img-top rounded" alt="Profile photo">
-                            </div>
-                        </div>
-                        <div class="card-body pb-5">
-                            <h3 class="h5 mb-2">Ayushi Chauhan</h3>
-                            <span class="h6 font-weight-normal text-gray mb-3">Developer</span>
-                            <ul class="list-unstyled d-flex justify-content-center mt-3 mb-4">
-                                <li>
-                                    <a href="#" target="_blank" aria-label="facebook social link" class="icon icon-xs icon-facebook mr-3">
-                                        <span class="fab fa-facebook-f"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank" aria-label="twitter social link" class="icon icon-xs icon-twitter mr-3">
-                                        <span class="fab fa-twitter"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" target="_blank" aria-label="slack social link" class="icon icon-xs icon-slack mr-3">
-                                        <span class="fab fa-github"></span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://www.linkedin.com/in/ayushi-chauhan-55854b1a1" target="_blank" aria-label="linkedin social link" class="icon icon-xs icon-linkedin mr-3">
-                                        <span class="fab fa-linkedin"></span>
-                                    </a>
-                                </li>
-                            </ul>
-                            <a class="btn btn-sm btn-primary mr-3" href="#">
-                                <span class="fas fa-user-plus mr-1"></span> Follow
-                            </a>
-                            <a class="btn btn-sm btn-primary" href="mailto:ayushichauhan1310@gmail.com">
-                                Message
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- End of Profile Card -->
-            </div>
-        </div>
-    </div>
-
-
-    <!-- ---------------------------------------------------------------------------profile cards----------------------------------------------------------------------------------- -->
-    <div class="contact-panel" style="    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;">
-
-
-        <div class="col-5 pr-6 pt-7 ">
-            <div class="card bg-primary shadow-soft border-light mb-6">
-                <div class="card-body px-5 py-5 text-center text-md-left">
-                    <div class="row align-items-center">
-                        <div class="col-md-6">
-                            <h2 class="mb-3">Get in touch</h2>
-                            <p class="mb-0">
-                                If you need any help with our products or services, choose one of the following ways to contact us.
-                            </p>
-                        </div>
-                        <div class="col-12 col-md-6 mt-4 mt-md-0 text-md-right">
-                            <a href="mailto:cridasis.project@gmail.com" class="btn btn-primary">
-                                <span class="mr-1">
-                                    <span class="fas fa-headphones"></span>
-                                </span>
-                                Contact Us
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+    
 
         <div class="contact-us-image pt-4" style="width: 500px;">
             <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -393,7 +155,7 @@
             <div class="card bg-primary shadow-soft border-light ">
                 <div class="card-body px-5 py-5 text-center text-md-left">
                     <div class="row ">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeus1OWR_sQJtGSWk5DsXKlFXCRlaOtV4ZGXtNzlLrG4ufPRg/viewform?embedded=true" width="450" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfGOGp2Q9oELy_IZ0P79xcA_rpxMaDazM63chlCh_gMl_NCIg/viewform?embedded=true" width="450" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                     </div>
                 </div>
             </div>
