--- a/templates/RandomForestClassifer.html
+++ b/templates/RandomForestClassifer.html
@@ -113,7 +113,7 @@
             <br>
 
             <div style=" margin-top: 25px; margin-bottom: 60px; ">
-                <label style="margin-left:25%; margin-bottom: 20px; font-size: 25px;" for="prediction-input"><b>PROJECTION LABEL:</b></label>
+                <label style="margin-left:25%; margin-bottom: 20px; font-size: 25px;" for="prediction-input"><b>PREDICTION LABEL:</b></label>
                 <p id="prediction-text" style=" margin-bottom: 20px;" class="prediction-text">{{ prediction_text }} </p>
             </div>
             <script>
